[tool.poetry]
name = "Flask-AlchemyDumps"
version = "0.0.13"
description = "SQLAlchemy backup/dump tool for Flask"
authors = ["Eduardo Cuducos <cuducos@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cuducos/alchemydumps"
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Framework :: Flask',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Intended Audience :: Developers',
    'Topic :: Database',
    'Topic :: System :: Archiving :: Backup',
    'Topic :: Utilities'
]
keywords = [
    "backup",
    "sqlalchemy",
    "flask",
    "restore",
    "ftp"
]
exclude = ["tests/"]

[tool.poetry.dependencies]
python = ">=3.6.2,<3.10.0"
Flask = ">=1.0.0"
Flask-SQLAlchemy = "^2.4.1"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
Black = "^21.8b0"
flake8 = "^3.9.2"
nose = "^1.3.7"
tox = "^3.24.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
